[package]
name = "tls-client-async"
authors = ["TLSNotary Team"]
description = "An async TLS client for TLSNotary"
keywords = ["tls", "mpc", "2pc", "client", "async"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.5"
edition = "2021"

[lib]
name = "tls_client_async"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
tls-client = { path = "../tls-client" }
# bytes.workspace = true
bytes = "1"
# futures.workspace = true
futures = "0.3"
# tokio-util = { workspace = true, features = ["io", "compat"] }
tokio-util = {version = "0.7", features = ["io", "compat"]}
# tracing = { workspace = true, optional = true }
tracing = {version = "0.1", optional = true}
# thiserror.workspace = true
thiserror = "1"

[dev-dependencies]
# tracing-subscriber.workspace = true
tracing-subscriber = "0.3"
# tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio = {version = "1", features = ["rt", "rt-multi-thread", "macros"]}
# webpki-roots.workspace = true
webpki-roots = "0.26"
# hyper = { workspace = true, features = ["client", "http1"] }
hyper = {version = "0.14", features = ["client", "http1"]}
# rstest = { workspace = true }
rstest = "0.12"
