[package]
name = "tls-core"
edition = "2021"

[lib]
name = "tls_core"

[features]
default = ["logging", "tls12", "prf"]
serde = ["dep:serde"]
tls12 = []
handshake = []
ghash = []
logging = ["tracing"]
prf = ["dep:hmac", "dep:sha2"]

[dependencies]
rand.workspace = true
sct.workspace = true
webpki = { workspace = true, features = ["alloc", "std"] }
tracing = { workspace = true, optional = true }
ring.workspace = true
futures.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
rustls-pemfile.workspace = true
thiserror.workspace = true
web-time.workspace = true
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
