[package]
name = "tls-proxy"
edition = "2021"
version = "1.0.1"

[lib]
name = "tls_proxy"

[dependencies]
hex = "0.4"
tls-parser = "0.12.0"
tls-core = { path = "../tls-core" }
strum_macros="0.26.1"
serde     ={ version="1.0.204", features=["derive"] }
serde_json="1.0.120"
indexmap = {version="1.9.3", features=["serde"]}